--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "firebase": "^5.5.7",
-    "firepeer": "^0.1.5",
-    "jquery": "^3.3.1"
+    "firepeer": "file:../firepeer"
   },
   "devDependencies": {
     "browserify": "^16.2.3",
